[package]
name = "blue-book"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6.1", features = ["derive"] }
heck = "0.5.0"
home = "0.5.12"
musicbrainz_rs = { version = "0.13.0", features = ["async"] }
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_plain = "1.0"
tempfile = "3.27"
tokio = { version = "1", features = ["full"] }
toml = "1.1.2"
